Timers without an associated window leak memory on exit #109953

Closed
opened 2023-07-11 04:32:27 +02:00 by Campbell Barton · 0 comments

In Blender 3.6 and 4.0 (8a73c36643c8e29ab250e367436536a976a1b753) timers are not freed on exit unless they are assigned a window, this can be shown using the Python API.

Run blender -d, then execute the following script in Python's text editor.

import bpy
wm = bpy.context.window_manager
for i in range(1000):
    wm.event_timer_add(0.01, window=None)

When exiting many window timer len: 96 0x60e000750798


NOTE: the root-cause of this report is the same as #109770, which has since been resolved.

In Blender 3.6 and 4.0 (`8a73c36643c8e29ab250e367436536a976a1b753`) timers are not freed on exit unless they are assigned a window, this can be shown using the Python API. Run `blender -d`, then execute the following script in Python's text editor. ``` import bpy wm = bpy.context.window_manager for i in range(1000): wm.event_timer_add(0.01, window=None) ``` When exiting many `window timer len: 96 0x60e000750798` --- NOTE: the root-cause of this report is the same as #109770, which has since been resolved.
Campbell Barton added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-11 04:32:28 +02:00
Campbell Barton changed title from Timers without windows are not freed on exit to Timers without an assosiated window leak memory on exit 2023-07-11 04:49:44 +02:00
Campbell Barton changed title from Timers without an assosiated window leak memory on exit to Timers without an associated window leak memory on exit 2023-07-11 04:50:45 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-07-11 04:54:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109953
No description provided.