Fix #109953: Timers without an associated window leak memory on exit

Thanks to @mod_moder & @Harley for their investigation, see !109603.